fix filters button width on mobile view

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -464,7 +464,7 @@ a{
 
 
 /* phone */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) and (min-width: 320px) {
 
     
     .header, #main{
@@ -572,12 +572,13 @@ a{
     }
 
     .filters-btn-container > button{
-        padding: 20px 12px 20px;
+        padding: 20px 4px 20px;
         justify-content: left;
         font-size: 11px;
-        width: 160px;
+        width: 100%;
         height: 50px;
         margin: 0 auto;
+        align-content: center;
     }
 
     .filters-btn-container > button > i{
